--- a/templates/blog/all_blogs.html
+++ b/templates/blog/all_blogs.html
@@ -1,1 +1,8 @@
 Hello Blog
+
+{% for blog in blogs %}
+   <h2>{{ blog.title }}</h2>
+    <h5>{{ blog.date }}</h5>
+    <p>{{ blog.description }}</p>
+
+{% endfor %}
