--- a/templates/startpage.html
+++ b/templates/startpage.html
@@ -1,9 +1,18 @@
 <h1>My personal portfolio</h1>
 
+{% load static %}
+
+<a href="{% url 'blog:all_blogs' %}">Blog</a>
+<br>
+
+<a href="{% static 'Resume.pdf' %}">Resume</a>
+
+<img src="{% static 'tYLgV195nsc.jpg' %}">
+
 {% for project in projects %}
     <h2>{{ project.title }}</h2>
     <p>{{ project.description }}</p>
-    <img src="{{ project.image.url }}" height="400", width="800">
+    <img src="{{ project.image.url }}" height="400" width="800">
     {% if project.url %}
     <br><a href="{{ project.url }}">Link</a>
     {% endif %}
