--- a/templates/startpage.html
+++ b/templates/startpage.html
@@ -1,11 +1,9 @@
-<h1>My personal portfolio</h1>
+{% extends 'base.html' %}
+
+{% block content %}
+    <h1>My personal portfolio</h1>
 
 {% load static %}
-
-<a href="{% url 'blog:all_blogs' %}">Blog</a>
-<br>
-
-<a href="{% static 'Resume.pdf' %}">Resume</a>
 
 <img src="{% static 'tYLgV195nsc.jpg' %}">
 
@@ -17,3 +15,7 @@
     <br><a href="{{ project.url }}">Link</a>
     {% endif %}
 {% endfor %}
+
+{% endblock %}
+
+
