--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,12 @@
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
         </li>
-          <li class="nav-item">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Links
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li class="nav-item">
               <a class="nav-link" href="https://www.linkedin.com/in/roman-skorokhodov-7b3324222/" target="_blank">LinkedIn</a>
           </li>
           <li class="nav-item">
@@ -40,15 +45,6 @@
           <li class="nav-item">
               <a class="nav-link" href="{% static 'Resume.pdf' %}">Resume</a>
           </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
         <li class="nav-item">
