--- a/templates/blog/all_blogs.html
+++ b/templates/blog/all_blogs.html
@@ -1,16 +1,23 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+
+{% load static %}
 
 {% block content %}
 
-Hello Blog
+<h1 id="blogtitle" class="font-weight-bold text-center">Blog</h1>
 
-<h2>Roma has written {{ blogs.count }} post{{ blogs.count|pluralize }}</h2>
+<h3 class="text-center mb-5">Roma has written {{ blogs.count }} blog{{ blogs.count|pluralize }}</h3>
 
 {% for blog in blogs %}
-    <a href="{% url 'blog:detail' blog.id %}"><h2>{{ blog.title }}</h2></a>
-    <h5>{{ blog.date|date:'M d Y'|upper }}</h5>
-    <p>{{ blog.description|safe|truncatechars:200 }}</p>
-
+<div class="row justify-content-center my-3">
+  <div class="col-md-10">
+    <a href="{% url 'blog:detail' blog.id %}">
+      <h2>{{ blog.title }}</h2>
+    </a>
+    <h5 class="text-muted">{{ blog.date|date:'M d Y'|upper }}</h5>
+    <h4>{{ blog.description|striptags|truncatechars:100 }}</h4>
+  </div>
+</div>
 {% endfor %}
 
 {% endblock %}
