--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -1,10 +1,12 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+
+{% load static %}
 
 {% block content %}
 
-<h1>{{ blog.title }}</h1>
+<h1 class="text-center mt-5" id="blogdetailtitle">{{ blog.title }}</h1>
 
-<h2>--{{ blog.date|date:'F jS Y' }}--</h2>
+<h5 class="text-center text-muted mb-5">{{ blog.date|date:'F jS Y' }}</h5>
 
 {{ blog.description|safe }}
 
