--- a/templates/startpage.html
+++ b/templates/startpage.html
@@ -1,21 +1,42 @@
 {% extends 'base.html' %}
 
-{% block content %}
-    <h1>My personal portfolio</h1>
+    <div class="container text-center">
 
 {% load static %}
 
-<img src="{% static 'tYLgV195nsc.jpg' %}">
+{% block content %}
 
-{% for project in projects %}
-    <h2>{{ project.title }}</h2>
-    <p>{{ project.description }}</p>
-    <img src="{{ project.image.url }}" height="400" width="800">
+<div class="row justify-content-center my-3">
+  <div class="col-5">
+    <img src="{% static 'IMG_6470.jpeg' %}" height="200" width="400" class="img-fluid">
+  </div>
+</div>
+
+<div class="row justify-content-center mb-3">
+  <div class="col-md-9 text-center">
+    <h1 id="hometext" class="font-weight-bold">Flaxen is doing cool job. Just see! 😊</h1>
+  </div>
+</div>
+
+<h2 class="mt-5">Portfolio</h2>
+<hr>
+<div class="row">
+  {% for project in projects %}
+  <div class="col-lg-4 col-md-6">
+
     {% if project.url %}
-    <br><a href="{{ project.url }}">Link</a>
+    <a href="{{ project.url }}">
+      <img src="{{ project.image.url }}" class="img-fluid mb-2">
+    </a>
+    {% else %}
+
+    <img src="{{ project.image.url }}" class="img-fluid mb-2">
     {% endif %}
-{% endfor %}
+    <h3>{{ project.title }}</h3>
+    <p>{{ project.description }}</p>
 
+  </div>
+  {% endfor %}
+</div>
+    </div>
 {% endblock %}
-
-
