--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 
-  <link rel="icon" type="image/png" href="{% static "A1ECB2AF-3877-4F10-8107-676904F118DB-245-00000012C4B01ED8.png" %}">
+  <link rel="icon" type="image/png" href="{% static "A1ECB2AF-3877-4F10-8107-676904F118DB-245-00000012C4B01ED8-removebg-preview.png" %}">
 
   <title>Flaxen</title>
 </head>
@@ -24,7 +24,7 @@
   <nav id="topNav" class="navbar navbar-expand-md navbar-light">
     <div class="container">
       <a class="navbar-brand" href="{% url 'home' %}">
-        <img src="{% static "A1ECB2AF-3877-4F10-8107-676904F118DB-245-00000012C4B01ED8.png" %}" width="30" height="30" class="d-inline-block align-top" alt="Nick's Logo">
+        <img src="{% static "A1ECB2AF-3877-4F10-8107-676904F118DB-245-00000012C4B01ED8-removebg-preview.png" %}" width="30" height="30" class="d-inline-block align-top" alt="Nick's Logo">
         <span>Flaxen</span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +33,7 @@
       <div class="collapse navbar-collapse text-center" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="{% static "Resume.pdf" %}">Resume</a>
+            <a class="nav-link" href="{% url "resume" %}">Resume</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://www.linkedin.com/in/roman-skorokhodov-7b3324222/" target="_blank">LinkedIn</a>
